dl 0.10: 
-------------------

* The default configuration file has been renamed to "config.php.dist" and must
  now be manually copied/renamed to be used. If a suitable "config.php" is not
  found in the include/ directory, configuration is read from "/etc/dl.php".
* Notifications of tickets and grants now use the same locale that was used
  during the creation of the ticket/grant itself.
* A new REST API has been implemented, allowing external applications to use the
  service programmatically.
* A command-line python client is now included in the distribution.
* Minor bug and UI fixes.


dl 0.9.1: 31/12/2011
--------------------

* Fixed a grave security issue: unauthorized parties can perform login as any
  arbitrary user when using the built-in authentication mechanism by supplying
  an authorization header. DL versions down to 0.3 are affected.


dl 0.9: 06/04/2011
------------------

* The settings of tickets and grants are now stored independently.
* Default ticket/grant settings can be specified in the config file.
* Most ticket and grant options are now moved into an "advanced" panel.
* Grant notifications now include the ticket password in the message.
* Form validation is now also performed in JavaScript.
* Enlarged the width of the interface to 800px.
* Users management is now available through the web interface.
* French, Italian, Spanish and German translation.
* Multi-line comments can be attached to tickets and grants.
* Improved the e-mail notification text.
* Improved ticket and grant listings.
* Tickets can now be edited after being created.
* Minor bug and UI fixes.


dl 0.8: 10/07/2010
------------------

* Update PHP-Gettext to 1.1.10 (fixing several PHP Notices).
* Fix browser language autodetection (typo, thanks to Bert-Jan Kamp).
* Fix ticket expiration when using sqlite3 (table locking issues).
* Do not purge tickets prematurely after an unsuccessful download.
* Purge tickets immediately after the download, when possible.