@@ -7,7 +7,7 @@ function isTicketExpired($DATA, $now = NULL)
 {
   if(!isset($now)) $now = time();
   return (($DATA["expire"] && $DATA["expire"] < $now)
-       || ($DATA["expire_last"] && $DATA["expire_last"] < $now)
+       || ($DATA["last_stamp"] && $DATA["last_time"] && ($DATA["last_stamp"] + $DATA["last_time"]) < $now)
        || ($DATA["expire_dln"] && $DATA["expire_dln"] <= $DATA["downloads"]));
 }
 
@@ -16,8 +16,8 @@ function ticketExpiry($DATA)
 {
   if($DATA["expire_dln"] || $DATA["last_time"])
   {
-    if($DATA["expire_last"])
-      return sprintf(T_("About %s"), humanTime($DATA["expire_last"] - time()));
+    if($DATA["last_stamp"] && $DATA["last_time"])
+      return sprintf(T_("About %s"), humanTime($DATA["last_stamp"] + $DATA["last_time"] - time()));
     elseif($DATA["expire_dln"] && $DATA["downloads"])
       return sprintf(T_("About %d downloads"), ($DATA["expire_dln"] - $DATA["downloads"]));
     elseif($DATA["expire"])
